--- a/app1/app1.yml
+++ b/app1/app1.yml
@@ -31,19 +31,19 @@
     pip:
       name: docker
 
-#  - name: make workdir
-#    shell: mkdir /tmp/jenkins/
+  - name: make workdir
+    shell: mkdir /tmp/jenkins/
 
   - name: Copy docker file to server
     copy:
-      src: /tmp/jenkins_task/Dockerfile
+      src: /tmp/jenkins/workspace/pl1-ansible/app1/Dockerfile
       dest: /tmp/jenkins/Dockerfile
       mode: '0644'
 
   - name: Copy sample.war to server
     copy:
-      src: /tmp/jenkins_task/app2.war
-      dest: /tmp/jenkins/app2.war
+      src: /tmp/jenkins/workspace/pl1-ansible/app1/app1.war
+      dest: /tmp/jenkins/app1.war
       mode: '0644'
 
   - name: build image
@@ -51,8 +51,8 @@
       cmd: docker build -t tomcat_app -f ./Dockerfile .
       chdir: /tmp/jenkins/
 
-#  - name: create container
-#    shell: docker run --name container3 -d -p 8081:8080 tomcat_app  
+  - name: create container
+    shell: docker run --name container -d -p 8081:8080 tomcat_app  
 
   - name: ensure nginx is at the latest version
     apt: name=nginx state=latest
@@ -64,7 +64,7 @@
 
   - name: copy the nginx config file and restart nginx
     copy:
-      src: /tmp/jenkins_task/nginx.cfg
+      src: /tmp/jenkins/workspace/pl1-ansible/app1/nginx.cfg
       dest: /etc/nginx/sites-available/nginx.cfg
 
   - name: create symlink
@@ -78,14 +78,16 @@
       name: nginx
       state: restarted
 
-  post_tasks:
-    - name: Instance Register
-      local_action:
-        aws_access_key: AKIAJMRIQ5LKMZU3AH3A
-        aws_secret_key: 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
-        module: ec2_elb
-        instance_id: i-0d6c459f3d608f63d
-        ec2_elbs: LB
-        state: present
-        region: eu-west-2
-
+  - local_action:
+      module: ec2_elb_lb
+      name: "ELB"
+      state: present
+      region: eu-west-2
+      zones:
+        - eu-west-2a
+        - eu-west-2b
+        - eu-west-2c
+      listeners:
+        - protocol: http
+          load_balancer_port: 80
+          instance_port: 80
