--- a/app1/app1.yml
+++ b/app1/app1.yml
@@ -91,3 +91,11 @@
         - protocol: http
           load_balancer_port: 80
           instance_port: 80
+      health_check:
+          ping_protocol: http
+          ping_port: 80
+          ping_path: "/"
+          response_timeout: 2
+          interval: 5
+          unhealthy_threshold: 2
+          healthy_threshold: 10
