--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,8 +20,7 @@ pipeline {
         sh """
         pwd
         cd app2/
-        pwd
-        chmod 2CB.pem
+        chmod 400 2CB.pem
         ansible-playbook -i hosts main.yml
         """
       }
