--- a/app2/main.yml
+++ b/app2/main.yml
@@ -34,8 +34,8 @@
     pip:
       name: boto
 
-  - name: Make workdir
-    shell: mkdir /tmp/jenkins/
+#  - name: Make workdir
+#    shell: mkdir /tmp/jenkins/
 
   - name: Copy docker file to server
     copy:
@@ -54,8 +54,8 @@
       cmd: docker build -t tomcat_app -f ./Dockerfile .
       chdir: /tmp/jenkins/
 
-  - name: Create container
-    shell: docker run --name container3 -d -p 8080:8080 tomcat_app  
+#  - name: Create container
+#    shell: docker run --name container3 -d -p 8080:8080 tomcat_app  
 
   - name: Ensure nginx is at the latest version
     apt: name=nginx state=latest
