--- a/app2/main.yml
+++ b/app2/main.yml
@@ -5,6 +5,9 @@
   remote_user: ubuntu
 
   tasks:
+  - include_vars: aws_access_key.yml
+  - include_vars: aws_secret_key.yml
+
   - name: update system
     shell: apt update
 
@@ -84,18 +87,18 @@
   post_tasks:
     - name: Instance Register
       local_action:
-        aws_access_key: AKIAJOY76PWXD5DUDJCA
-        aws_secret_key: 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
+        aws_access_key: "{{ var_aws_access_key }}"
+        aws_secret_key: "{{ var_aws_secret_key }}"
         module: ec2_elb
         instance_id: i-0efaad620e772f3b3
-        ec2_elbs: ELB
+        ec2_elbs: LB
         state: present
         region: eu-west-1
 
     - name: Terminate app1
       ec2:
-        aws_access_key: AKIAJOY76PWXD5DUDJCA
-        aws_secret_key: 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
+        aws_access_key: "{{ var_aws_access_key }}"
+        aws_secret_key: "{{ var_aws_secret_key }}"
         state: 'absent'
-        instance_ids: 'i-0eaa0346b83362e6c'
+        instance_ids: 'i-0afa72a346dc253c2'
         region: eu-west-1
