--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,10 @@ pipeline {
           sh """
           cd app1/vars/
           pwd         
+          cd ~
+          pwd
           echo "$AWS_SECRET_ACCESS_KEY" >> aws_access_key.yml
-          echo "$AWS_ACCESS_KEY_ID" >> aws_access_key.yml        
+          echo "$AWS_ACCESS_KEY_ID" >> aws_secret_key.yml        
           chmod 400 2CB.pem
           ansible-playbook -i hosts main.yml
           """
