--- a/app1/main.yml
+++ b/app1/main.yml
@@ -36,8 +36,8 @@
     pip:
       name: boto
 
-  - name: make workdir
-    shell: mkdir /tmp/jenkins/
+#  - name: make workdir
+#    shell: mkdir /tmp/jenkins/
 
   - name: Copy docker file to server
     copy:
@@ -56,8 +56,8 @@
       cmd: docker build -t tomcat_app -f ./Dockerfile .
       chdir: /tmp/jenkins/
 
-  - name: create container
-    shell: docker run --name container -d -p 8080:8080 tomcat_app  
+#  - name: create container
+#    shell: docker run --name container -d -p 8080:8080 tomcat_app  
 
   - name: ensure nginx is at the latest version
     apt: name=nginx state=latest
