--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         withCredentials([usernamePassword(credentialsId: 'aws_cred', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
           sh """
           cd app1/vars/
-          echo "AWS_ACCESS_KEY_ID" >> aws_access_key.yml
+          echo "$AWS_ACCESS_KEY_ID" >> aws_access_key.yml
           echo "$AWS_SECRET_ACCESS_KEY" >> aws_secret_key.yml        
           cd ..
           chmod 400 2CB.pem
