--- a/app1/main.yml
+++ b/app1/main.yml
@@ -32,12 +32,11 @@
     pip:
       name: docker
 
-  - name: Install boto for Python
-    pip:
-      name: boto
-
-  - name: make workdir
-    shell: mkdir /tmp/jenkins/
+  - name: Create a directory if it does not exist
+    file:
+      path: /tmp/jenkins
+      state: directory
+      mode: '0755'
 
   - name: Copy docker file to server
     copy:
