--- a/app1/main.yml
+++ b/app1/main.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: all
-  become: yes
-  become_method: sudo
-  remote_user: ubuntu
+  become: no
+#  become_method: sudo
+#  remote_user: ubuntu
 
   tasks:
   - include_vars: aws_access_key.yml
