--- a/app1/main.yml
+++ b/app1/main.yml
@@ -106,7 +106,7 @@
           interval: 30
           unhealthy_threshold: 5
           healthy_threshold: 10
-
+      sudo: yes
 
   - name: Instance Register
     local_action:
