--- a/app2/main.yml
+++ b/app2/main.yml
@@ -33,6 +33,10 @@
     pip:
       name: docker
 
+  - name: Install Docker Module for Python
+    pip:
+      name: boto
+
   - name: Create a directory if it does not exist
     file:
       path: /tmp/jenkins       
