--- a/app1/main.yml
+++ b/app1/main.yml
@@ -32,6 +32,10 @@
     pip:
       name: docker
 
+  - name: Install Docker Module for Python
+    pip:
+      name: boto
+
   - name: Create a directory if it does not exist
     file:
       path: /tmp/jenkins
