--- a/app2/main.yml
+++ b/app2/main.yml
@@ -56,8 +56,8 @@
       cmd: docker build -t tomcat_app -f ./Dockerfile .
       chdir: /tmp/jenkins/
 
-  - name: Create container
-    shell: docker run --name container3 -d -p 8080:8080 tomcat_app  
+#  - name: Create container
+#    shell: docker run --name container3 -d -p 8080:8080 tomcat_app  
 
   - name: Ensure nginx is at the latest version
     apt: name=nginx state=latest
